--- a/circle.css
+++ b/circle.css
@@ -1,31 +1,58 @@
 html {
-  background: url(https://i.imgur.com/FkCPaAw.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: url(https://i.imgur.com/fH70RpA.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Lekton');
+
 body {
-  background-color: black;
   overflow: hidden;
   margin: 0;
   padding: 0;
 }
 
+img {
+  max-width: 75%;
+  margin: 0 auto;
+}
+
+figure {
+  margin: 0;
+}
+
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.text1 {
+  font-family: 'Lekton';
+  font-weight: bold;
+  font-size: 1.2em;
+  color: seashell;
+  opacity: 1;
+  position: fixed;
+  top: 1.5vh;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 5;
+  animation: move1 17s ease infinite;
+  transition: 1s ease-out;
+}
+
 .c1 {
   border-radius: 50%;
   background-color: saddlebrown;
-  opacity: 0.2;
-  width: 60vw;
-  height: 20vh;
+  opacity: 0.4;
+  width: 40vw;
+  height: 25vh;
   position: absolute;
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
   justify-content: center;
   align-items: center;
-  animation: move1 11s ease infinite;
+  animation: move1 17s ease infinite;
   filter: blur(0px);
   transition: 1s ease-out;
 }
@@ -39,24 +66,40 @@ body {
   0%, 100% {
     transform: translate(-50%, 0%)
   }
+
   50% {
-    transform: translate(-50%, 80vh)
+    transform: translate(-50%, 75vh)
   }
+}
+
+.text2 {
+  font-family: 'Lekton';
+  font-weight: bold;
+  font-size: 1.2em;
+  color: seashell;
+  opacity: 1;
+  position: fixed;
+  top: 1.5vh;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 5;
+  animation: move2 18s ease infinite;
+  transition: 1s ease-out;
 }
 
 .c2 {
   border-radius: 50%;
   background-color: saddlebrown;
-  opacity: 0.2;
-  width: 70vw;
-  height: 40vh;
+  opacity: 0.4;
+  width: 60vw;
+  height: 50vh;
   position: absolute;
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
   justify-content: center;
   align-items: center;
-  animation: move2 12s ease infinite;
+  animation: move2 18s ease infinite;
   filter: blur(0px);
   transition: 1s ease-out;
 }
@@ -70,24 +113,40 @@ body {
   0%, 100% {
     transform: translate(-50%, 0%)
   }
+
   50% {
-    transform: translate(-50%, 60vh)
+    transform: translate(-50%, 50vh)
   }
+}
+
+.text3 {
+  font-family: 'Lekton';
+  font-weight: bold;
+  font-size: 1.2em;
+  color: seashell;
+  opacity: 1;
+  position: fixed;
+  top: 1.5vh;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 5;
+  animation: move3 19s ease infinite;
+  transition: 1s ease-out;
 }
 
 .c3 {
   border-radius: 50%;
   background-color: saddlebrown;
-  opacity: 0.2;
+  opacity: 0.4;
   width: 80vw;
-  height: 60vh;
+  height: 75vh;
   position: absolute;
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
   justify-content: center;
   align-items: center;
-  animation: move3 13s ease infinite;
+  animation: move3 19s ease infinite;
   filter: blur(0px);
   transition: 1s ease-out;
 }
@@ -101,24 +160,40 @@ body {
   0%, 100% {
     transform: translate(-50%, 0%)
   }
+
   50% {
-    transform: translate(-50%, 40vh)
+    transform: translate(-50%, 25vh)
   }
+}
+
+.text4 {
+  font-family: 'Lekton';
+  font-weight: bold;
+  font-size: 1.2em;
+  color: seashell;
+  opacity: 1;
+  position: fixed;
+  top: 1.5vh;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 5;
+  animation: move4 20s ease infinite;
+  transition: 1s ease-out;
 }
 
 .c4 {
   border-radius: 50%;
   background-color: saddlebrown;
-  opacity: 0.2;
-  width: 90vw;
-  height: 80vh;
+  opacity: 0.4;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
   justify-content: center;
   align-items: center;
-  animation: move4 14s ease infinite;
+  animation: move4 20s ease infinite;
   filter: blur(0px);
   transition: 1s ease-out;
 }
@@ -132,26 +207,88 @@ body {
   0%, 100% {
     transform: translate(-50%, 0%)
   }
+
   50% {
-    transform: translate(-50%, 20vh)
+    transform: translate(-50%, 0%)
   }
 }
 
-.c5 {
-  border-radius: 50%;
-  background-color: saddlebrown;
-  opacity: 0.2;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  top: 0%;
-  justify-content: center;
-  align-items: center;
-  filter: blur(0px);
-  transition: 1s ease;
+.button {
+  position: fixed;
+  outline: none;
+  width: 125px;
+  bottom: 0;
+  left: 0;
+  z-index: 25;
 }
 
-.c5:hover {
-  filter: blur(20px);
-  transition: 1s ease-out;
+.overlay {
+  outline: none;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 245, 238);
+  background-color: rgba(255, 245, 238, 0.9);
+  overflow-x: hidden;
+  transition: 0.1s;
+}
+
+.overlay-content {
+  outline: none;
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  font-family: 'Lekton';
+  color: saddlebrown;
+  opacity: 1;
+  font-size: 0.9em;
+  margin-top: 5vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.overlay a {
+  outline: none;
+  text-decoration: none;
+  font-family: 'Lekton';
+  color: saddlebrown;
+  opacity: 1;
+  font-size: 1em;
+}
+
+.overlay a:hover, .overlay a:focus {
+  outline: none;
+  color: pink;
+}
+
+.overlay .closebtn {
+  outline: none;
+  position: fixed;
+  width: 125px;
+  bottom: 0;
+  left: 0;
+  z-index: 15;
+}
+
+.hide {
+  display: none;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {
+    outline: none;
+    font-size: 20px
+  }
+
+  .overlay .closebtn {
+    outline: none;
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
